@@ -1,7 +1,7 @@
 # -*- coding: utf-8 -*-
-# 
+#
 # Nitrate is copyright 2010 Red Hat, Inc.
-# 
+#
 # Nitrate is free software: you can redistribute it and/or modify it
 # under the terms of the GNU General Public License as published by
 # the Free Software Foundation, either version 2 of the License, or
@@ -9,10 +9,10 @@
 # the hope that it will be useful, but WITHOUT ANY WARRANTY; without
 # even the implied warranties of TITLE, NON-INFRINGEMENT,
 # MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
-# 
+#
 # The GPL text is available in the file COPYING that accompanies this
 # distribution and at <http://www.gnu.org/licenses>.
-# 
+#
 # Authors:
 #   David Malcolm <dmalcolm@redhat.com>
 #   Xuqing Kuang <xkuang@redhat.com>
@@ -23,7 +23,7 @@ import tcms
 from setuptools import setup, find_packages
 
 PACKAGE_NAME = 'Nitrate'
-PACKAGE_VER = '3.8.3'
+PACKAGE_VER = '3.8.4'
 PACKAGE_DESC = 'Test Case Management System'
 PACKAGE_URL = 'https://fedorahosted.org/nitrate/browser/trunk/nitrate'
 
@@ -37,7 +37,7 @@ def get_files_below(path):
         for filename in filenames:
             # strip off leading "tcms/" string from each path:
             yield os.path.join(dirpath, filename)[5:]
-        
+
 def get_package_data():
     # annoyingly, it appears that package_data has to list filenames; it can't
     # cope with directories, so we have to figure this out for it:
